[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runledger"
version = "0.1.0"
description = "Run CLI experiments under a time budget: complete snapshots, anytime sweeps, and a submittable best-known incumbent."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "runledger contributors" }]
keywords = ["experiment", "snapshot", "sweep", "autotune", "hpc", "benchmark", "incumbent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Benchmark",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
runledger = "runledger.cli:main"

[tool.hatch.build.targets.wheel]
only-include = ["src/runledger"]

[tool.hatch.build.targets.wheel.sources]
"src/runledger" = "runledger"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
